tests/NormalTests/paczka1/small_fuzzy/94136268.err
Error in line 1: Xg5 A5 68,8
Error in line 3: YLtbRC A444 97,8
Error in line 12: S431 A5 54,2
